_sass/footer.scss
.footer-links {
  width: 100%;
  margin: 10px;
  padding: 0;

  @media #{$tablet} {
    -webkit-flex: 1 0 180px;
    flex: 1 0 180px;
  }

  li {
    list-style: none;
    margin: 10px auto;

    @media #{$tablet} {
      max-width: 200px;
    }
    a {
      &:hover {
        text-decoration: none;
      }
      svg {
        fill: #999;
        margin-right: 10px;
        transition: fill 0.2s ease;
        vertical-align: middle;
        position: relative;
        top: -2px;
        width: 22px;
        height: 22px;
      }

      &:hover svg {
        fill: #fff;
      }

      &.twitter-icon:hover svg {
        fill: #55acee;
      }

      &.google-plus-icon:hover svg {
        fill: #db4437;
      }

      &.calendar-icon:hover svg {
        fill: #0073cf;
      }

      &.dockerhub-icon:hover svg {
        fill: #029cec;
      }

      &.youtube-icon:hover svg {
        fill: #cd201f;
      }

      &.layer5-icon:hover svg {
        fill: #00b39f;
      }

      &.linkedin-icon:hover svg {
        fill: #0077b5;
      }

      &.slack-icon:hover svg {
        fill: #4b154b;
      }

      &.github-icon:hover svg {
        fill: #000000;
      }

      &.rss-icon:hover svg {
        fill: #f26522;
      }
    }
  }
}

.feed {
  width: 100%;
  margin: 10px;
  padding: 0;

  @media #{$tablet} {
    -webkit-flex: 1 0 310px;
    flex: 1 0 310px;
  }

  ul {
    list-style: none;
    margin: 10px auto;

    @media #{$tablet} {
      max-width: 400px;
    }
  }
}

footer {
  padding: 50px 0 50px 0;
  font-size: 0.9rem;
  position: relative;
  background: #222;
  color: #fff;

  .copyright {
    font-size: 0.9rem;
    margin-top: 1rem;
    padding-top: 1rem;
    border-top: $coolgray 1px solid;
    display: flex;
    justify-content:space-evenly;
    @media #{$tablet} {
      text-align: center;
    }
  }

  .layer5-footer {
    display: inline-flex;
    align-items: center;
    justify-content: center;
    margin: auto;

    img {
      width: 120px;
      height: 30px;
    }
  }

  &,
  a {
    color: #999;
  }

  h2 {
    font-size: 1.2em;
    margin: 30px 0;
    margin: 15px auto;
    color: #ccc;
    font-weight: bold;
  }

  .footer-columns {
    @extend %flexbox;
    @include flex-flow(wrap);
  }

  a {
    text-decoration: none;

    &:hover {
      color: #fff;
    }
  }

  .legal-line {
    width: 100%;
    padding: 30px 0;
    margin: 0;
    background-color: #222527;

    a {
      font-weight: 600;
    }
  }
}

